--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -174,6 +174,7 @@
                                         <option value="">
                                             All (except Pending)
                                         </option>
+                                        <option value="Pending">Pending</option>
                                         <option value="Active">Active</option>
                                         <option value="Used">Used</option>
                                         <option value="Expired">Expired</option>
