--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -114,10 +114,10 @@
                         <h3 class="text-lg font-semibold text-gray-900">
                             Today's Summary
                         </h3>
-                        <div
-                            id="coupon-summary"
-                            class="my-4 grid grid-cols-1 sm:grid-cols-3 gap-4 text-center"
-                        ></div>
+                        <div 
+                        id="coupon-summary" 
+                        class="my-4 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-4 text-center">
+                        </div>
 
                         <form
                             id="filter-form"
